examples/exp/SmallExp/ZorderSmallNoITEOp.txt
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (a | - b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | - b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (- a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (- a | b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (Z.abs a | b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (Z.abs a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  x, y : Z
  ============================
  x >= 0 -> x * y = 1 -> x = 1
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (= (* op_1 op_0) 1)
 ).
1 subgoal
  
  ============================
  forall a b : Z, b <> 0 -> a mod b = 0 -> (b | a)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b : Z, (b | a) -> a mod b = 0
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  x, y : Z
  ============================
  x < y -> y <> x
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b : Z, 0 <= a -> 0 < b -> (a | b) -> a <= b
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

a <= 1
a <= b
b + a = 1
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a b d -> Zis_gcd b a d
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a 0 a
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a 1 1
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a a a
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a (- b) d -> Zis_gcd b a d
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a b d -> Zis_gcd b a (- d)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b : Z, rel_prime a b -> Bezout a b 1
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  ~ prime 0
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  p : Z
  ============================
  prime p -> 2 <= p
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  ============================
  forall p q r : Z, (p | q) -> (p | r) -> (p | Z.gcd q r)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b, c : Z
  ============================
  Z.gcd (Z.gcd a b) c = Z.gcd a (Z.gcd b c)
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n, m : Z
  ============================
  n < m \/ n = m \/ n > m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  decidable (Zne n m)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  decidable (n > m)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  decidable (n >= m)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n <> m -> n < m \/ m < n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n <= m -> ~ m < n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n < m -> ~ m <= n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n <= m -> ~ n > m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n > m -> ~ n <= m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  ~ n >= m -> n < m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  ~ n < m -> n >= m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  ~ n > m -> n <= m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  ~ n <= m -> n > m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n > m -> ~ m > n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n : Z
  ============================
  ~ n > n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  n <= m -> n < m \/ n = m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n > m -> m > p -> n > p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  m <= n -> m > p -> n > p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n > m -> p <= m -> n > p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n >= m -> m >= p -> n >= p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  m <= n -> Z.succ m <= Z.succ n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

n <= m
(Z.succ n) = (Z.succ m)
(Z.succ m) + 1 <= (Z.succ n)
1 subgoal
  
  n, m : Z
  ============================
  n < m -> Z.succ n < Z.succ m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ n) + 1 = (Z.succ m)
(Z.succ n) + 1 <= (Z.succ m)
(Z.succ m) + n = (Z.succ n) + m
1 subgoal
  
  n, m : Z
  ============================
  m > n -> Z.succ m > Z.succ n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ n) + 1 = (Z.succ m)
(Z.succ n) + 1 <= (Z.succ m)
(Z.succ n) = n && m <= (Z.succ m)
1 subgoal
  
  n, m : Z
  ============================
  Z.succ m > Z.succ n -> m > n
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n, m : Z
  ============================
  Z.succ m <= Z.succ n -> m <= n
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n, m : Z
  ============================
  Z.succ n < Z.succ m -> n < m
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n : Z
  ============================
  Z.succ n > n
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n : Z
  ============================
  ~ Z.succ n <= n
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n, m : Z
  ============================
  m > n -> Z.succ n <= m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ n) <= n
(Z.succ n) = m
(Z.succ n) <= m
1 subgoal
  
  n, m : Z
  ============================
  n <= m -> Z.succ m > n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ m) = 1 + m
(Z.succ m) = n + 1
n + 1 <= (Z.succ m)
1 subgoal
  
  n, m : Z
  ============================
  n <= m -> n < Z.succ m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ m) = 1 + m
(Z.succ m) = n + 1
n + 1 <= (Z.succ m)
1 subgoal
  
  n, m : Z
  ============================
  n < m -> Z.succ n <= m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.succ n) <= n
(Z.succ n) <= m
(Z.succ n) = n + 1
1 subgoal
  
  n, m : Z
  ============================
  Z.succ m > n -> n <= m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

n <= m
(Z.succ m) <= m
(Z.succ m) = m + 1
1 subgoal
  
  n, m : Z
  ============================
  n < Z.succ m -> n <= m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

n <= m
(Z.succ m) = m
(Z.succ m) <= m
1 subgoal
  
  n, m : Z
  ============================
  Z.succ n <= m -> m > n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

n + 1 <= m
n + 1 = (Z.succ n)
n + 1 <= (Z.succ n)
1 subgoal
  
  n, m : Z
  ============================
  Z.succ n <= m -> n <= m
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

n <= m
n <= (Z.succ n)
1 <= (Z.succ n) && m + n = 1
1 subgoal
  
  n, m : Z
  ============================
  m > Z.succ n -> Z.pred m > n
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n, m : Z
  ============================
  Z.succ n < m -> n < Z.pred m
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  n : Z
  ============================
  0 < n -> 0 <= Z.pred n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

1 <= (Z.pred n)
n <= (Z.pred n)
0 <= (Z.pred n)
1 subgoal
  
  n : Z
  ============================
  n > 0 -> 0 <= Z.pred n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

1 <= (Z.pred n)
n <= (Z.pred n)
0 <= (Z.pred n)
1 subgoal
  
  ============================
  forall p q : positive, Z.neg p <= Z.pos q
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

p + q = 1
p + q = 0
1 <= p + q
1 subgoal
  
  ============================
  forall p : positive, Z.pos p > 0
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  ============================
  forall p : positive, 0 <= Z.pos p
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

1 = p
0 = p
1 <= p
1 subgoal
  
  ============================
  forall p : positive, Z.neg p < 0
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  ============================
  forall n : nat, 0 <= Z.of_nat n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

(Z.of_nat n) = 1
(Z.of_nat n) = 0
0 <= (Z.of_nat n)
1 subgoal
  
  n, m : Z
  ============================
  Z.succ n > m -> n > m \/ m = n
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

m <= n
(Z.succ n) <= n
(Z.succ n) = n + 1
1 subgoal
  
  n, m, p : Z
  ============================
  n > m -> p + n > p + m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n > m -> n + p > m + p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n <= m -> p + n <= p + m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n <= m -> n + p <= m + p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n < m -> p + n < p + m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n < m -> n + p < m + p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  p + n <= p + m -> n <= m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n + p <= m + p -> n <= m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  p + n < p + m -> n < m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n + p < m + p -> n < m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  p + n > p + m -> n > m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n + p > m + p -> n > m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m, p : Z
  ============================
  n <= m -> 0 <= p -> n * p <= m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_0 op_1) (* (- 1) (* op_0 op_2))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  n <= m -> 0 <= p -> p * n <= p * m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_0 op_1) (* (- 1) (* op_0 op_2))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  0 < p -> n < m -> n * p < m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n > m -> n * p > m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n < m -> n * p < m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n <= m -> n * p <= m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  0 < p -> n <= m -> n * p <= m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n < m -> p * n < p * m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  0 < p -> n < m -> p * n < p * m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n > m -> p * n > p * m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_2 op_0) (* (- 1) (* op_2 op_1))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  n >= m -> p >= 0 -> n * p >= m * p
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_0 op_1) (* (- 1) (* op_0 op_2))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  n >= m -> p >= 0 -> p * n >= p * m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_0 op_1) (* (- 1) (* op_0 op_2))) 0)
 ).
1 subgoal
  
  n, m, p, q : Z
  ============================
  n >= p -> m >= q -> p >= 0 -> q >= 0 -> n * m >= p * q
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_3 op_2))) 1)
 ).
1 subgoal
  
  n, m, p, q : Z
  ============================
  n <= p -> m <= q -> 0 <= n -> 0 <= m -> n * m <= p * q
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_3 op_2) (* (- 1) (* op_1 op_0))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n * p < m * p -> n < m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  0 < p -> n * p < m * p -> n < m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n * p <= m * p -> n <= m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  0 < p -> n * p <= m * p -> n <= m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n * p >= m * p -> n >= m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 0)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  p > 0 -> n * p > m * p -> n > m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_0) (* (- 1) (* op_1 op_2))) 1)
 ).
1 subgoal
  
  n, m, p, q : Z
  ============================
  0 <= n < p -> 0 <= m < q -> n * m < p * q
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_3 op_1) (* (- 1) (* op_2 op_0))) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  n > 0 -> m > 0 -> n * m > 0
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (* op_1 op_0) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  n > 0 -> 0 <= m * n -> 0 <= m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (* op_1 op_0) 0)
 ).
1 subgoal
  
  n, m : Z
  ============================
  0 < n -> 0 < m * n -> 0 < m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (* op_1 op_0) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  n > 0 -> 0 < m * n -> 0 < m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (* op_1 op_0) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  n > 0 -> n * m > 0 -> m > 0
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (* op_0 op_1) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  0 <= n -> m * m < n * n -> m < n
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_1 op_1) (* (- 1) (* op_0 op_0))) 1)
 ).
1 subgoal
  
  n, m : Z
  ============================
  n >= 0 -> n * n > m * m -> n > m
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (>= (+ (* op_0 op_0) (* (- 1) (* op_1 op_1))) 1)
 ).
1 subgoal
  
  n, m, p : Z
  ============================
  n + p = m <-> n = m - p
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  0 < n - m -> m < n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  0 <= n - m -> m <= n
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  n, m : Z
  ============================
  m <= n -> 0 <= n - m
The command has indeed failed with message:
Anomaly "Uncaught exception Stdlib.Parsing.Parse_error."
Please report at http://coq.inria.fr/bugs/.
